Notmuch 0.11.1 (2012-mm-dd)
===========================

Bug-fix release.
----------------

Fix error handling in python bindings.

  The python bindings in 0.11 failed to detect NULL pointers being
  returned from libnotmuch functions and thus failed to raise
  exceptions to indicate the error condition. Any subsequent calls
  into libnotmuch caused segmentation faults.


Notmuch 0.11 (2012-01-13)
=========================

Command-Line Interface
----------------------

Hooks

  Hooks have been introduced to notmuch. Hooks are scripts that notmuch
  invokes before and after certain actions. Initially, "notmuch new"
  supports "pre-new" and "post-new" hooks that are run before and after
  importing new messages into the database.

notmuch reply --decrypt bugfix

  The "notmuch reply" command with --decrypt argument had a rarely
  occurring bug that caused an encrypted message not to be decrypted
  sometimes. This is now fixed.

Performance
-----------

Automatic tag query optimization

  "notmuch tag" now automatically optimizes the user's query to
  exclude messages whose tags won't change.  In the past, we've
  suggested that people do this by hand; this is no longer necessary.

Don't sort messages when creating a dump file

  This speeds up tag dumps considerably, without any loss of
  information. To replicate the old behavior of sorted output (for
  example to compare two dump files), one can use e.g. sort(1).

Memory Management
-----------------

Reduction of memory leaks

  Two memory leaks when searching and showing messages were identified
  and fixed in this release.

Emacs Interface
---------------

Bug fixes

  notmuch-show-advance (bound to the spacebar in notmuch-show-mode) had
  a bug that caused it to always jump to the next message, even if it
  should have scrolled down to show more of the current message instead.
  This is now fixed.

Support "notmuch new" as a notmuch-poll-script

  It's now possible to use "notmuch new" as a notmuch-poll-script